(login/logout text) Capitalize login/logout button text

--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -7,8 +7,8 @@
     "showAllTools": "Alle Tools anzeigen",
     "showLessTools": "nur meine Favoriten anzeigen",
     "searchLabel": "Eine Grafik suchen",
-    "login": "anmelden",
-    "logout": "abmelden",
+    "login": "Anmelden",
+    "logout": "Abmelden",
     "username": "Benutzername",
     "password": "Passwort",
     "back": "zurück",
