--- a/client/locales/en/translation.json
+++ b/client/locales/en/translation.json
@@ -7,8 +7,8 @@
     "showAllTools": "Show all tools",
     "showLessTools": "Show only my favorites",
     "searchLabel": "Search for a graphic",
-    "login": "login",
-    "logout": "logout",
+    "login": "Login",
+    "logout": "Logout",
     "username": "Username",
     "password": "Password",
     "back": "back",
