--- a/client/locales/en/translation.json
+++ b/client/locales/en/translation.json
@@ -50,7 +50,8 @@
       "This graphic is already activ. Changes will be applied in all articles. Do you really want to edit this graphic?",
     "confirmProceedToEditor": "Yes, proceed to editor",
     "cancelProceedToEditor": "No, cancel",
-    "arrayEntryAdd": "add {{ arrayEntryLabel }}",
+    "arrayEntryAdd": "Add {{ arrayEntryLabel }}",
+    "arrayEntryRemove": "Delete {{ arrayEntryLabel }}",
     "activatingEditorTakesTooLong":
       "It takes too long to load the editor, something is wrong.",
     "failedToSave": "Failed to save",
