--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -25,7 +25,8 @@
     "failedToSaveChanges": "Die Änderung konnten nicht gespeichert werden.",
     "loginFailed": "Ihr Benutzername oder Passwort ist unbekannt.",
     "serverConnectionFailed": "Die Verbindung zum Server ist fehlgeschlagen.",
-    "articlesWithThisGraphic": "Artikel mit dieser Grafik"
+    "articlesWithThisGraphic": "Artikel mit dieser Grafik",
+    "loadMore": "Mehr laden"
   },
   "userConfig": {
     "initials": "Initialen",
@@ -74,8 +75,8 @@
   },
   "item": {
     "save": "Speichern",
-    "activ": "aktiv",
-    "inactiv": "inaktiv",
+    "active": "aktiv",
+    "inactive": "inaktiv",
     "activate": "Aktivieren",
     "deactivate": "Deaktivieren",
     "blueprint": "Als Vorlage benutzen",
@@ -108,11 +109,9 @@
     "updated": "zuletzt bearbeitet"
   },
   "livingdocsComponent": {
-    "insert": "Q Element verwenden",
-    "edit": "in Q bearbeiten",
-    "titleLabel": "Titel des Q Elements: ",
-    "selectGraphic": "bitte ein Q Element aus der Liste auswählen",
-    "searchLabel": "Ein Q Element suchen"
+    "insert": "Grafik verwenden",
+    "edit": "In Q bearbeiten",
+    "selectGraphic": "Wähle eine Grafik aus der Liste aus"
   },
   "notifications": {
     "failedLoadingEditorConfig":
