(chore) fix typo in translation

--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -173,7 +173,7 @@
     },
     "generalError": {
       "title": "Es fehlen einige Daten um die Vorschau anzuzeigen",
-      "body": "Bitte alle Pflichtfelder ausfühlen."
+      "body": "Bitte alle Pflichtfelder ausfüllen."
     },
     "technicalError": {
       "title": "Ein technisches Problem ist aufgetreten",
