(dialogs) add sub question to not saved leave editor confirm dialog

--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -46,7 +46,8 @@
   "editor": {
     "title": "Gib deine Daten ein",
     "questionLeaveWithUnsavedChanges":
-      "Es sind nicht alle Änderungen gespeichert, trotzdem schliessen?",
+      "Es sind nicht alle Änderungen gespeichert.",
+    "questionLeaveWithUnsavedChangesSub": "trotzdem schliessen?",
     "questionReallyEditBecauseActive":
       "Diese Grafik ist bereits aktiv. Änderungen werden in allen Artikel übernommen.",
     "questionReallyEditBecauseActiveSub": " Willst du diese Grafik wirklich bearbeiten?",
