--- a/client/locales/en/translation.json
+++ b/client/locales/en/translation.json
@@ -46,7 +46,8 @@
   "editor": {
     "title": "Enter your data",
     "questionLeaveWithUnsavedChanges":
-      "Not all changes are saved, close anyway?",
+      "Not all changes are saved",
+    "questionLeaveWithUnsavedChangesSub": "close anyway?",
     "questionReallyEditBecauseActive":
       "This graphic is already activ. Changes will be applied in all articles.",
     "questionReallyEditBecauseActiveSub": " Do you really want to edit this graphic?",
