(chore) fix typo in translation

--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -33,7 +33,7 @@
     "toolSelection": "Tool Auswahl",
     "toolsToShowInitially": "Tools auf der Startseite",
     "toolSelectionType": {
-      "byUsage": "zeige jene, die ich am häufigsten einsetzt",
+      "byUsage": "zeige jene, die ich am häufigsten einsetze",
       "byConfig": "ich möchte selber festlegen, welche ich sehe"
     }
   },
