Rename isValueMissing notification to required notification

--- a/client/locales/en/translation.json
+++ b/client/locales/en/translation.json
@@ -19,8 +19,7 @@
     "only": "only",
     "graphic": "graphic",
     "graphic_plural": "graphics",
-    "browserSupportMessage":
-      "Q is optimised for Chrome and may does not work in your browser.",
+    "browserSupportMessage": "Q is optimised for Chrome and may does not work in your browser.",
     "changesSaved": "Changes saved.",
     "failedToSaveChanges": "Failed to save changes.",
     "loginFailed": "Your username or password is not correct.",
@@ -38,38 +37,31 @@
     }
   },
   "statistics": {
-    "tooFewNewGraphics":
-      "Only {{count}} new active $t(general.graphic) in the last {{days}} days. Total: {{totalActiveCount}} active.",
-    "enoughNewGraphics":
-      "{{count}} new active $t(general.graphic) in the last {{days}} days. Total: {{totalActiveCount}} active."
+    "tooFewNewGraphics": "Only {{count}} new active $t(general.graphic) in the last {{days}} days. Total: {{totalActiveCount}} active.",
+    "enoughNewGraphics": "{{count}} new active $t(general.graphic) in the last {{days}} days. Total: {{totalActiveCount}} active."
   },
   "editor": {
     "title": "Enter your data",
     "questionLeaveWithUnsavedChanges": "Not all changes are saved",
     "questionLeaveWithUnsavedChangesSub": "Close anyway?",
-    "questionReallyEditBecauseActive":
-      "This graphic is already activ. Changes will be applied in all articles.",
-    "questionReallyEditBecauseActiveSub":
-      "Do you really want to edit this graphic?",
+    "questionReallyEditBecauseActive": "This graphic is already activ. Changes will be applied in all articles.",
+    "questionReallyEditBecauseActiveSub": "Do you really want to edit this graphic?",
     "confirmProceedToEditor": "Yes, proceed to editor",
     "cancelProceedToEditor": "No, cancel",
     "arrayEntryAdd": "Add {{ arrayEntryLabel }}",
     "arrayEntryRemove": "Delete {{ arrayEntryLabel }}",
-    "activatingEditorTakesTooLong":
-      "It takes too long to load the editor, something is wrong.",
+    "activatingEditorTakesTooLong": "It takes too long to load the editor, something is wrong.",
     "failedToSave": "Failed to save",
     "conflictOnSave": "Failed to save due to a conflict",
     "failedToLoadEditorPart": "failed to load the editor for this element",
-    "noAutosaveBecauseActive":
-      "Automatic saving is deactivated because the graphic is already active",
+    "noAutosaveBecauseActive": "Automatic saving is deactivated because the graphic is already active",
     "required": "required",
     "transpose": "Switch rows and columns"
   },
   "metaEditor": {
     "title": "Metainfos for internal use",
     "annotations": "Annotations",
-    "annotationPlaceholder":
-      "Add tags to your graphic which help you to search for it",
+    "annotationPlaceholder": "Add tags to your graphic which help you to search for it",
     "publication": "Publication",
     "shortname": "Shortname",
     "department": "Department"
@@ -86,8 +78,7 @@
     "failedToBlueprintItem": "Failed to blueprint the graphic.",
     "delete": "Delete",
     "questionDeleteItem": "Delete graphic?",
-    "questionDeleteItemSub":
-      "Do you really want to delete <strong>{{graphicTitle}}</strong>?",
+    "questionDeleteItemSub": "Do you really want to delete <strong>{{graphicTitle}}</strong>?",
     "confirmDeleteItem": "Yes, delete",
     "cancelDeleteItem": "Cancel",
     "lastSaved": "Last saved"
@@ -107,8 +98,7 @@
     "title": "title",
     "author": "created by",
     "updated": "last edited",
-    "empty":
-      "No graphics found. Try a different search term or reset the filter settings."
+    "empty": "No graphics found. Try a different search term or reset the filter settings."
   },
   "livingdocsComponent": {
     "insert": "Use this graphic",
@@ -124,14 +114,13 @@
     "failedToLoadItem": "Failed to load the graphic.",
     "toolNotAvailable": "This tool is not available",
     "maxNumberOfFilesExceed": "You are not allowed to upload more files",
-    "isValueMissing": {
-      "title": "Required field",
+    "required": {
+      "title": "Field is required",
       "body": "This field must be filled out."
     },
     "emptyData": {
       "title": "Fill in your data",
-      "body":
-        "Enter your data or copy directly from Excel. Select cell A1 and copy/paste using Ctrl/Cmd + V."
+      "body": "Enter your data or copy directly from Excel. Select cell A1 and copy/paste using Ctrl/Cmd + V."
     },
     "hasColumnTitles": {
       "title": "No column header defined",
@@ -139,24 +128,19 @@
     },
     "tooManyColumns": {
       "title": "Data contains many columns",
-      "body":
-        "Click on the «Switch rows and columns» button. Your graphic will probably be more clear."
+      "body": "Click on the «Switch rows and columns» button. Your graphic will probably be more clear."
     }
   },
   "dropzone": {
     "dictDefaultMessage": "Drop files here to upload",
     "dictDefaultMessageSingleFile": "Drop file here to upload",
-    "dictFallbackMessage":
-      "Your browser does not support drag'n'drop file uploads.",
-    "dictFallbackText":
-      "Please use the fallback form below to upload your files like in the olden days.",
-    "dictFileTooBig":
-      "File is too big ({{filesize}}MiB). Max filesize: {{maxFilesize}}MiB.",
+    "dictFallbackMessage": "Your browser does not support drag'n'drop file uploads.",
+    "dictFallbackText": "Please use the fallback form below to upload your files like in the olden days.",
+    "dictFileTooBig": "File is too big ({{filesize}}MiB). Max filesize: {{maxFilesize}}MiB.",
     "dictInvalidFileType": "You can't upload files of this type.",
     "dictResponseError": "Server responded with {{statusCode}} code.",
     "dictCancelUpload": "Cancel upload",
-    "dictCancelUploadConfirmation":
-      "Are you sure you want to cancel this upload?",
+    "dictCancelUploadConfirmation": "Are you sure you want to cancel this upload?",
     "dictRemoveFile": "Remove file",
     "dictMaxFilesExceeded": "You cannot upload any more files."
   },
@@ -173,8 +157,7 @@
     },
     "generalError": {
       "title": "Please fill out all required fields",
-      "body":
-        "In order to show the preview all required fields need to be filled out."
+      "body": "In order to show the preview all required fields need to be filled out."
     },
     "technicalError": {
       "title": "Technical error occurred",
