--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -19,8 +19,7 @@
     "only": "nur",
     "graphic": "Grafik",
     "graphic_plural": "Grafiken",
-    "browserSupportMessage":
-      "Q ist für Chrome optimiert und funktioniert in Ihrem Browser evtl. nicht.",
+    "browserSupportMessage": "Q ist für Chrome optimiert und funktioniert in Ihrem Browser evtl. nicht.",
     "changesSaved": "Die Änderungen wurden gespeichert.",
     "failedToSaveChanges": "Die Änderung konnten nicht gespeichert werden.",
     "loginFailed": "Ihr Benutzername oder Passwort ist unbekannt.",
@@ -38,40 +37,31 @@
     }
   },
   "statistics": {
-    "tooFewNewGraphics":
-      "Nur {{count}} neue aktive $t(general.graphic) in den letzten {{days}} Tagen. Total {{totalActiveCount}} aktive.",
-    "enoughNewGraphics":
-      "{{count}} neue aktive $t(general.graphic) in den letzten {{days}} Tagen. Total {{totalActiveCount}} aktive."
+    "tooFewNewGraphics": "Nur {{count}} neue aktive $t(general.graphic) in den letzten {{days}} Tagen. Total {{totalActiveCount}} aktive.",
+    "enoughNewGraphics": "{{count}} neue aktive $t(general.graphic) in den letzten {{days}} Tagen. Total {{totalActiveCount}} aktive."
   },
   "editor": {
     "title": "Gib deine Daten ein",
-    "questionLeaveWithUnsavedChanges":
-      "Es sind nicht alle Änderungen gespeichert.",
+    "questionLeaveWithUnsavedChanges": "Es sind nicht alle Änderungen gespeichert.",
     "questionLeaveWithUnsavedChangesSub": "Trotzdem schliessen?",
-    "questionReallyEditBecauseActive":
-      "Diese Grafik ist bereits aktiv. Änderungen werden in allen Artikeln übernommen.",
-    "questionReallyEditBecauseActiveSub":
-      "Willst du diese Grafik wirklich bearbeiten?",
+    "questionReallyEditBecauseActive": "Diese Grafik ist bereits aktiv. Änderungen werden in allen Artikeln übernommen.",
+    "questionReallyEditBecauseActiveSub": "Willst du diese Grafik wirklich bearbeiten?",
     "confirmProceedToEditor": "Ja, weiter zum Editor",
     "cancelProceedToEditor": "Nein, abbrechen",
     "arrayEntryAdd": "{{ arrayEntryLabel }} hinzufügen",
     "arrayEntryRemove": "{{ arrayEntryLabel }} löschen",
-    "activatingEditorTakesTooLong":
-      "Es dauert zu lange den Editor zu laden, irgendwas ist schief gelaufen.",
+    "activatingEditorTakesTooLong": "Es dauert zu lange den Editor zu laden, irgendwas ist schief gelaufen.",
     "failedToSave": "Speichern ist fehlgeschlagen",
     "conflictOnSave": "Speichern ist fehlgeschlagen weil ein Konflikt besteht",
-    "failedToLoadEditorPart":
-      "Der Editor für dieses Element konnte nicht geladen werden",
-    "noAutosaveBecauseActive":
-      "Automatisches speichern ist deaktiviert da die Grafik bereits aktiv ist",
+    "failedToLoadEditorPart": "Der Editor für dieses Element konnte nicht geladen werden",
+    "noAutosaveBecauseActive": "Automatisches speichern ist deaktiviert da die Grafik bereits aktiv ist",
     "required": "erforderlich",
     "transpose": "Zeilen und Spalten tauschen"
   },
   "metaEditor": {
     "title": "Metainfos für den internen Gebrauch",
     "annotations": "Notizen",
-    "annotationPlaceholder":
-      "Hier kannst du zusätzliche Schlagwörter erfassen, mit denen die Grafik einfacher gefunden werden kann",
+    "annotationPlaceholder": "Hier kannst du zusätzliche Schlagwörter erfassen, mit denen die Grafik einfacher gefunden werden kann",
     "publication": "Medium",
     "shortname": "Autorenkürzel",
     "department": "Ressort"
@@ -85,12 +75,10 @@
     "blueprint": "Als Vorlage benutzen",
     "blueprintTitlePrefix": "Kopie von ",
     "edit": "Bearbeiten",
-    "failedToBlueprintItem":
-      "Die Grafik konnte nicht als Vorlage verwendet werden.",
+    "failedToBlueprintItem": "Die Grafik konnte nicht als Vorlage verwendet werden.",
     "delete": "Löschen",
     "questionDeleteItem": "Grafik löschen?",
-    "questionDeleteItemSub":
-      "Bist du sicher, dass du die Grafik <strong>{{graphicTitle}}</strong> löschen willst?",
+    "questionDeleteItemSub": "Bist du sicher, dass du die Grafik <strong>{{graphicTitle}}</strong> löschen willst?",
     "confirmDeleteItem": "Ja, löschen",
     "cancelDeleteItem": "Abbrechen",
     "lastSaved": "Zuletzt gespeichert"
@@ -110,8 +98,7 @@
     "title": "Titel",
     "author": "erstellt von",
     "updated": "zuletzt bearbeitet",
-    "empty":
-      "Keine Grafiken gefunden. Versuche einen anderen Suchbegriff oder setze die Filtereinstellungen zurück."
+    "empty": "Keine Grafiken gefunden. Versuche einen anderen Suchbegriff oder setze die Filtereinstellungen zurück."
   },
   "livingdocsComponent": {
     "insert": "Grafik verwenden",
@@ -121,22 +108,19 @@
     "emptyList": "Keine Grafiken gefunden. Versuche einen anderen Suchbegriff."
   },
   "notifications": {
-    "failedLoadingEditorConfig":
-      "Die Editorkonfiguration konnte nicht geladen werden",
+    "failedLoadingEditorConfig": "Die Editorkonfiguration konnte nicht geladen werden",
     "graphicNeedsATitle": "Grafik braucht einen Titel",
     "failedLoadingItems": "Grafiken konnten nicht geladen werden",
     "failedToLoadItem": "Die Grafik konnte nicht geladen werden.",
     "toolNotAvailable": "Dieses Tool steht nicht zur Verfügung",
-    "maxNumberOfFilesExceed":
-      "Es können keine weiteren Dateien hochgeladen werden",
-    "isValueMissing": {
+    "maxNumberOfFilesExceed": "Es können keine weiteren Dateien hochgeladen werden",
+    "required": {
       "title": "Pflichtfeld",
       "body": "Dieses Feld muss zwingend ausgefüllt sein."
     },
     "emptyData": {
       "title": "Daten eingeben",
-      "body":
-        "Du kannst Daten direkt eintragen oder aus Excel kopieren. Dafür die Zelle A1 anwählen und per Ctrl/Cmd + V einfügen."
+      "body": "Du kannst Daten direkt eintragen oder aus Excel kopieren. Dafür die Zelle A1 anwählen und per Ctrl/Cmd + V einfügen."
     },
     "hasColumnTitles": {
       "title": "Spaltenüberschriften vergessen?",
@@ -144,24 +128,17 @@
     },
     "tooManyColumns": {
       "title": "Sehr viele Spalten",
-      "body":
-        "Klicke mal auf «Zeilen und Spalten tauschen». Vermutlich ist die Grafik danach klarer."
+      "body": "Klicke mal auf «Zeilen und Spalten tauschen». Vermutlich ist die Grafik danach klarer."
     }
   },
   "dropzone": {
-    "dictDefaultMessage":
-      "Anklicken oder Bilder hierhin ziehen, um sie hochzuladen",
-    "dictDefaultMessageSingleFile":
-      "Anklicken oder Bild hierhin ziehen, um es hochzuladen",
-    "dictFallbackMessage":
-      "Ihr Browser unterstützt Drag&Drop Dateiuploads nicht",
+    "dictDefaultMessage": "Anklicken oder Bilder hierhin ziehen, um sie hochzuladen",
+    "dictDefaultMessageSingleFile": "Anklicken oder Bild hierhin ziehen, um es hochzuladen",
+    "dictFallbackMessage": "Ihr Browser unterstützt Drag&Drop Dateiuploads nicht",
     "dictFallbackText": "Benutzen Sie das Formular um Ihre Dateien hochzuladen",
-    "dictFileTooBig":
-      "Die Datei ist zu gross. Die maximale Dateigrösse beträgt {{maxFileSize}}MB",
-    "dictInvalidFileType":
-      "Eine Datei dieses Typs kann nicht hochgeladen werden",
-    "dictResponseError":
-      "Der Server hat ihre Anfrage mit Status {{statusCode}} abgelehnt",
+    "dictFileTooBig": "Die Datei ist zu gross. Die maximale Dateigrösse beträgt {{maxFileSize}}MB",
+    "dictInvalidFileType": "Eine Datei dieses Typs kann nicht hochgeladen werden",
+    "dictResponseError": "Der Server hat ihre Anfrage mit Status {{statusCode}} abgelehnt",
     "dictCancelUpload": "Hochladen abbrechen",
     "dictRemoveFile": "Datei entfernen",
     "dictMaxFilesExceeded": "Sie können keine weiteren Dateien mehr hochladen"
@@ -175,8 +152,7 @@
     "error": "Die Grafik kann nicht angezeigt werden",
     "hint": {
       "title": "Alle Grössen kontrolliert?",
-      "body":
-        "Bitte kontrolliere, ob die Grafik in allen Grössen gut funktioniert. Unsere Nutzer werden sie auf ganz unterschiedlichen Geräten sehen."
+      "body": "Bitte kontrolliere, ob die Grafik in allen Grössen gut funktioniert. Unsere Nutzer werden sie auf ganz unterschiedlichen Geräten sehen."
     },
     "generalError": {
       "title": "Es fehlen einige Daten um die Vorschau anzuzeigen",
@@ -184,8 +160,7 @@
     },
     "technicalError": {
       "title": "Ein technisches Problem ist aufgetreten",
-      "body":
-        "Bitte versuch die Grafik erneut zu speichern und Q neu zu laden. {{errorMessage}}"
+      "body": "Bitte versuch die Grafik erneut zu speichern und Q neu zu laden. {{errorMessage}}"
     }
   }
 }
