--- a/client/locales/fr/translation.json
+++ b/client/locales/fr/translation.json
@@ -19,8 +19,7 @@
     "only": "seulement",
     "graphic": "graphique",
     "graphic_plural": "graphiques",
-    "browserSupportMessage":
-      "Q est optimisé pour Chrome et peut ne pas fonctionner dans votre navigateur.",
+    "browserSupportMessage": "Q est optimisé pour Chrome et peut ne pas fonctionner dans votre navigateur.",
     "changesSaved": "Changements sauvegardés.",
     "failedToSaveChanges": "Impossible de sauvegarder les changements.",
     "loginFailed": "Votre identifiant ou mot de passe est incorrect.",
@@ -38,40 +37,31 @@
     }
   },
   "statistics": {
-    "tooFewNewGraphics":
-      "{{count}} nouvellement activés $t(general.graphic) lors des derniers {{days}} jours. Total: {{totalActiveCount}} activés.",
-    "enoughNewGraphics":
-      "{{count}} nouvellement activés $t(general.graphic) lors des derniers {{days}} jours. Total: {{totalActiveCount}} activés."
+    "tooFewNewGraphics": "{{count}} nouvellement activés $t(general.graphic) lors des derniers {{days}} jours. Total: {{totalActiveCount}} activés.",
+    "enoughNewGraphics": "{{count}} nouvellement activés $t(general.graphic) lors des derniers {{days}} jours. Total: {{totalActiveCount}} activés."
   },
   "editor": {
     "title": "Entrez vos données",
-    "questionLeaveWithUnsavedChanges":
-      "Des changements n'ont pas été sauvegardés",
+    "questionLeaveWithUnsavedChanges": "Des changements n'ont pas été sauvegardés",
     "questionLeaveWithUnsavedChangesSub": "Fermer quand même ?",
-    "questionReallyEditBecauseActive":
-      "Ce graphique est actif. Les changements seront appliqués dans tous les articles.",
-    "questionReallyEditBecauseActiveSub":
-      "Voulez-vous vraiment éditer ce graphique ?",
+    "questionReallyEditBecauseActive": "Ce graphique est actif. Les changements seront appliqués dans tous les articles.",
+    "questionReallyEditBecauseActiveSub": "Voulez-vous vraiment éditer ce graphique ?",
     "confirmProceedToEditor": "Oui, édition",
     "cancelProceedToEditor": "Non, annuler",
     "arrayEntryAdd": "Ajouter {{ arrayEntryLabel }}",
     "arrayEntryRemove": "Supprimer {{ arrayEntryLabel }}",
-    "activatingEditorTakesTooLong":
-      "L'éditeur met trop de temps à charger, quelque chose s'est mal passé.",
+    "activatingEditorTakesTooLong": "L'éditeur met trop de temps à charger, quelque chose s'est mal passé.",
     "failedToSave": "Impossible de sauvegarder",
     "conflictOnSave": "Impossible de sauvegarder en raison d'un conflit",
-    "failedToLoadEditorPart":
-      "L'éditeur ne peut être chargé en raison de cet élément",
-    "noAutosaveBecauseActive":
-      "La sauvegarde automatique est désactivée car ce graphique est déjà actif",
+    "failedToLoadEditorPart": "L'éditeur ne peut être chargé en raison de cet élément",
+    "noAutosaveBecauseActive": "La sauvegarde automatique est désactivée car ce graphique est déjà actif",
     "required": "requis",
     "transpose": "Echange de lignes et de colonnes"
   },
   "metaEditor": {
     "title": "Informations pour usage interne",
     "annotations": "Annotations",
-    "annotationPlaceholder":
-      "Ici vous pouvez capturer des mots-clés supplémentaires qui facilitent la recherche du graphique",
+    "annotationPlaceholder": "Ici vous pouvez capturer des mots-clés supplémentaires qui facilitent la recherche du graphique",
     "publication": "Publication",
     "shortname": "Raccourcis Auteur",
     "department": "Département"
@@ -86,12 +76,10 @@
     "blueprintTitlePrefix": "Copie de ",
     "edit": "Modifier",
     "failedToLoadItem": "Impossible de charger le graphique.",
-    "failedToBlueprintItem":
-      "Impossible de préparer le graphique à partir du modèle.",
+    "failedToBlueprintItem": "Impossible de préparer le graphique à partir du modèle.",
     "delete": "Supprimer",
     "questionDeleteItem": "Supprimer le graphique?",
-    "questionDeleteItemSub":
-      "Voulez-vous vraiment supprimer <strong>{{graphicTitle}}</strong>?",
+    "questionDeleteItemSub": "Voulez-vous vraiment supprimer <strong>{{graphicTitle}}</strong>?",
     "confirmDeleteItem": "Oui, supprimer",
     "cancelDeleteItem": "Abandonner",
     "lastSaved": "dernier enregistré"
@@ -111,10 +99,8 @@
     "title": "titre",
     "author": "créé par",
     "updated": "dernière édition",
-    "empty":
-      "Aucun graphique trouvé. Essayez un terme de recherche différent ou réinitialisez les paramètres du filtre.",
-    "emptyList":
-      "Aucun graphique trouvé. Essayez un terme de recherche différent."
+    "empty": "Aucun graphique trouvé. Essayez un terme de recherche différent ou réinitialisez les paramètres du filtre.",
+    "emptyList": "Aucun graphique trouvé. Essayez un terme de recherche différent."
   },
   "livingdocsComponent": {
     "insert": "Utilisez ce graphique",
@@ -123,21 +109,19 @@
     "inactiveGraphic": "Le graphique doit d'abord être activé en Q"
   },
   "notifications": {
-    "failedLoadingEditorConfig":
-      "Impossible de charger la configuration de l'éditeur",
+    "failedLoadingEditorConfig": "Impossible de charger la configuration de l'éditeur",
     "graphicNeedsATitle": "Ce graphique a besoin d'un titre",
     "failedLoadingItems": "Impossible de charger ces graphiques",
     "failedToLoadItem": "Impossible de charger ce graphique.",
     "toolNotAvailable": "Cet outil n'est pas disponible",
     "maxNumberOfFilesExceed": "Vous ne pouvez pas envoyer plus de fichiers",
-    "isValueMissing": {
+    "required": {
       "title": "Champ obligatoire",
       "body": "Ce champ doit être rempli."
     },
     "emptyData": {
       "title": "Entrer les données",
-      "body":
-        "Vous pouvez entrer des données directement ou copier à partir d'Excel. Sélectionnez la cellule A1 et collez-la avec Ctrl / Cmd + V."
+      "body": "Vous pouvez entrer des données directement ou copier à partir d'Excel. Sélectionnez la cellule A1 et collez-la avec Ctrl / Cmd + V."
     },
     "hasColumnTitles": {
       "title": "Oubliez les en-têtes de colonnes?",
@@ -145,24 +129,19 @@
     },
     "tooManyColumns": {
       "title": "De très nombreuses colonnes",
-      "body":
-        "Cliquez sur «Echange de lignes et de colonnes». Vraisemblablement, le graphique est plus clair après."
+      "body": "Cliquez sur «Echange de lignes et de colonnes». Vraisemblablement, le graphique est plus clair après."
     }
   },
   "dropzone": {
     "dictDefaultMessage": "Déposez ici les fichiers à envoyer",
     "dictDefaultMessageSingleFile": "Déposez ici le fichier à envoyer",
-    "dictFallbackMessage":
-      "Votre navigateur ne permet pas les envois de fichiers par glisser-déposer.",
-    "dictFallbackText":
-      "Merci d'utiliser le formulaire ci-dessous pour envoyer vos fichiers comme à l'ancienne époque.",
-    "dictFileTooBig":
-      "Le fichier est trop gros ({{filesize}}MiB). Taille max : {{maxFilesize}}MiB.",
+    "dictFallbackMessage": "Votre navigateur ne permet pas les envois de fichiers par glisser-déposer.",
+    "dictFallbackText": "Merci d'utiliser le formulaire ci-dessous pour envoyer vos fichiers comme à l'ancienne époque.",
+    "dictFileTooBig": "Le fichier est trop gros ({{filesize}}MiB). Taille max : {{maxFilesize}}MiB.",
     "dictInvalidFileType": "Vous ne pouvez pas envoyer de fichiers de ce type.",
     "dictResponseError": "Le serveur a répondu avec le code {{statusCode}}.",
     "dictCancelUpload": "Annuler l'envoi",
-    "dictCancelUploadConfirmation":
-      "Êtes-vous certain de vouloir annuler cet envoi ?",
+    "dictCancelUploadConfirmation": "Êtes-vous certain de vouloir annuler cet envoi ?",
     "dictRemoveFile": "Supprimer ce fichier",
     "dictMaxFilesExceeded": "Vous ne pouvez pas envoyer plus de fichiers."
   },
@@ -175,8 +154,7 @@
     "error": "Le graphique ne peut pas être affiché",
     "hint": {
       "title": "Toutes les tailles contrôlées?",
-      "body":
-        "S'il vous plaît vérifier si le graphique fonctionne bien dans toutes les tailles. Nos utilisateurs les verront sur des appareils très différents."
+      "body": "S'il vous plaît vérifier si le graphique fonctionne bien dans toutes les tailles. Nos utilisateurs les verront sur des appareils très différents."
     },
     "generalError": {
       "title": "Il y a un manque de données pour montrer l'aperçu",
@@ -184,8 +162,7 @@
     },
     "technicalError": {
       "title": "Un problème technique est survenu",
-      "body":
-        "Veuillez réessayer de sauvegarder le graphique et recharger Q. {{errorMessage}}"
+      "body": "Veuillez réessayer de sauvegarder le graphique et recharger Q. {{errorMessage}}"
     }
   }
 }
