added translations for tasks page

--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -162,5 +162,8 @@
       "title": "Ein technisches Problem ist aufgetreten",
       "body": "Bitte versuch die Grafik erneut zu speichern und Q neu zu laden. {{errorMessage}}"
     }
+  },
+  "tasks": {
+    "run": "Ausführen"
   }
 }
