added translations for en & fr

--- a/client/locales/en/translation.json
+++ b/client/locales/en/translation.json
@@ -163,5 +163,8 @@
       "title": "Technical error occurred",
       "body": "Please try to save the graphic and reload Q. {{errorMessage}}"
     }
+  },
+  "tasks": {
+    "run": "Run"
   }
 }
