--- a/client/locales/fr/translation.json
+++ b/client/locales/fr/translation.json
@@ -164,5 +164,8 @@
       "title": "Un problème technique est survenu",
       "body": "Veuillez réessayer de sauvegarder le graphique et recharger Q. {{errorMessage}}"
     }
+  },
+  "tasks": {
+    "run": "Effectuer"
   }
 }
