implemented better login error messages

--- a/client/locales/fr/translation.json
+++ b/client/locales/fr/translation.json
@@ -22,6 +22,8 @@
     "changesSaved": "Changements sauvegardés.",
     "failedToSaveChanges": "Impossible de sauvegarder les changements.",
     "loginFailed": "Votre identifiant ou mot de passe est incorrect.",
+    "loginTimeout": "Le serveur met trop de temps à répondre. Nous y travaillons. Veuillez réessayer plus tard.",
+    "genericServerError": " Il y a un problème sur le serveur. Nous y travaillons. Veuillez réessayer plus tard.",
     "serverConnectionFailed": "Impossible de se connecter au serveur.",
     "articlesWithThisGraphic": "Articles avec ce graphique",
     "loadMore": "Charger plus"
