--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -22,6 +22,8 @@
     "changesSaved": "Die Änderungen wurden gespeichert.",
     "failedToSaveChanges": "Die Änderung konnten nicht gespeichert werden.",
     "loginFailed": "Ihr Benutzername oder Passwort ist unbekannt.",
+    "loginTimeout": "Server braucht zu lange um zu antworten. Wir arbeiten daran. Bitte versuch es später nochmals.",
+    "genericServerError": "Es ist ein Problem auf dem Server aufgetreten. Wir arbeiten daran. Bitte versuch es später nochmals.",
     "serverConnectionFailed": "Die Verbindung zum Server ist fehlgeschlagen.",
     "articlesWithThisGraphic": "Artikel mit dieser Grafik",
     "loadMore": "Mehr laden"
