--- a/client/locales/en/translation.json
+++ b/client/locales/en/translation.json
@@ -22,6 +22,8 @@
     "changesSaved": "Changes saved.",
     "failedToSaveChanges": "Failed to save changes.",
     "loginFailed": "Your username or password is not correct.",
+    "loginTimeout": "Server takes too long to reply. We're working on it. Please try again later.",
+    "genericServerError": "A problem occured on the server. We're working on it. Please try again later",
     "serverConnectionFailed": "Failed to connect to server.",
     "articlesWithThisGraphic": "Articles with this graphic",
     "loadMore": "Load more"
