Add notice text

--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -57,7 +57,8 @@
     "failedToLoadEditorPart": "Der Editor für dieses Element konnte nicht geladen werden",
     "noAutosaveBecauseActive": "Automatisches speichern ist deaktiviert da die Grafik bereits aktiv ist",
     "required": "erforderlich",
-    "transpose": "Zeilen und Spalten tauschen"
+    "transpose": "Zeilen und Spalten tauschen",
+    "bboxComponentNotice": "Hinweis: Shift gedrückt halten und Rechteck mit der Maus aufziehen um Ausschnitt zu definieren"
   },
   "metaEditor": {
     "title": "Metainfos für den internen Gebrauch",
