--- a/client/locales/en/translation.json
+++ b/client/locales/en/translation.json
@@ -57,7 +57,8 @@
     "failedToLoadEditorPart": "failed to load the editor for this element",
     "noAutosaveBecauseActive": "Automatic saving is deactivated because the graphic is already active",
     "required": "required",
-    "transpose": "Switch rows and columns"
+    "transpose": "Switch rows and columns",
+    "bboxComponentNotice": "Notice: Hold the Shift key and draw a rectangle with the mouse to define the visual area"
   },
   "metaEditor": {
     "title": "Metainfos for internal use",
