--- a/client/locales/fr/translation.json
+++ b/client/locales/fr/translation.json
@@ -57,7 +57,8 @@
     "failedToLoadEditorPart": "L'éditeur ne peut être chargé en raison de cet élément",
     "noAutosaveBecauseActive": "La sauvegarde automatique est désactivée car ce graphique est déjà actif",
     "required": "requis",
-    "transpose": "Echange de lignes et de colonnes"
+    "transpose": "Echange de lignes et de colonnes",
+    "bboxComponentNotice": "Remarque: maintenez la touche Maj enfoncée et tracez un rectangle avec la souris pour définir la zone visuelle"
   },
   "metaEditor": {
     "title": "Informations pour usage interne",
