Implement schema-editor component schema-editor-dialog

--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -2,6 +2,8 @@
   "general": {
     "yes": "Ja",
     "no": "Nein",
+    "save": "Speichern",
+    "cancel": "Abbrechen",
     "createLabel": "Neu erstellen",
     "searchEditLabel": "Suchen und bearbeiten",
     "showAllTools": "Alle Tools anzeigen",
@@ -58,7 +60,8 @@
     "noAutosaveBecauseActive": "Automatisches speichern ist deaktiviert da die Grafik bereits aktiv ist",
     "required": "erforderlich",
     "transpose": "Zeilen und Spalten tauschen",
-    "bboxComponentNotice": "Hinweis: Shift gedrückt halten und Rechteck mit der Maus aufziehen um Ausschnitt zu definieren"
+    "bboxComponentNotice": "Hinweis: Shift gedrückt halten und Rechteck mit der Maus aufziehen um Ausschnitt zu definieren",
+    "openDialog": "Dialog öffnen"
   },
   "metaEditor": {
     "title": "Metainfos für den internen Gebrauch",
