--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -24,6 +24,7 @@
     "changesSaved": "Die Änderungen wurden gespeichert.",
     "failedToSaveChanges": "Die Änderung konnten nicht gespeichert werden.",
     "loginFailed": "Ihr Benutzername oder Passwort ist unbekannt.",
+    "loginFailedGeneric": "Anmeldung fehlgeschlagen.",
     "loginTimeout": "Server braucht zu lange um zu antworten. Wir arbeiten daran. Bitte versuch es später nochmals.",
     "genericServerError": "Es ist ein Problem auf dem Server aufgetreten. Wir arbeiten daran. Bitte versuch es später nochmals.",
     "serverConnectionFailed": "Die Verbindung zum Server ist fehlgeschlagen.",
