--- a/client/locales/en/translation.json
+++ b/client/locales/en/translation.json
@@ -24,6 +24,9 @@
     "changesSaved": "Changes saved.",
     "failedToSaveChanges": "Failed to save changes.",
     "loginFailed": "Your username or password is not correct.",
+    "loginFailedGeneric": "Failed to login.",
+    "loginTechnicalIssues": "Are there technical issues?",
+    "loginContactUsOnSlack": "Contact us on slack.",
     "loginFailedServer": "Failed to login.",
     "loginTimeout": "Server takes too long to reply. We're working on it. Please try again later.",
     "genericServerError": "A problem occured on the server. We're working on it. Please try again later",
